@@ -40,9 +40,9 @@
 
   <property name="name" value="${ant.project.name}"/>
   <property name="Name" value="Lucene"/>
-  <property name="dev.version" value="3.0-dev"/>
+  <property name="dev.version" value="3.1-dev"/>
   <property name="version" value="${dev.version}"/>
-  <property name="compatibility.tag" value="lucene_2_9_back_compat_tests_20091115"/>
+  <property name="compatibility.tag" value="lucene_3_0_back_compat_tests_20091116"/>
   <property name="spec.version" value="${version}"/>	
   <property name="year" value="2000-${current.year}"/>
   <property name="final.name" value="lucene-${name}-${version}"/>
@@ -60,8 +60,8 @@
   <property name="javac.debug" value="on"/>
   <property name="javac.source" value="1.5"/>
   <property name="javac.target" value="1.5"/>
-  <property name="javac.source.tag" value="1.4"/>
-  <property name="javac.target.tag" value="1.4"/>
+  <property name="javac.source.tag" value="1.5"/>
+  <property name="javac.target.tag" value="1.5"/>
 
   <property name="javadoc.link" value="http://java.sun.com/j2se/1.5/docs/api/"/>
   <property name="javadoc.access" value="protected"/>
