@@ -1,6 +1,8 @@
 Lucene contrib change Log
 
-======================= Trunk (not yet released) =======================
+======================= Trunk (not yet released) =========================
+
+======================= Release 3.0.0 (2009-11-25) =======================
 
 Changes in backwards compatibility policy
 
